--- a/static/css/checks.css
+++ b/static/css/checks.css
@@ -45,7 +45,7 @@
     padding-left: 30px;
 }
 
-#filters > button {
+#filters > button:not(:active) {
     box-shadow: none;
 }
 
